2007-02-26  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.18.0.

==================== 2.17.92 ====================

2007-02-26  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.17.92

2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Dist MAINTAINERS.

2007-02-18  Vincent Untz  <vuntz@gnome.org>

	* configure.in: require pango 1.15.4 for voodoo magic (vertical text
	with automatic gravity)

2007-02-17  Vincent Untz  <vuntz@gnome.org>

	* */.cvsignore: kill

2007-02-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in: check for gconf for libpanel-applet
	Fix bug #382307

2007-02-12  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.17.92.

==================== 2.17.91 ====================

2007-02-12  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.17.91

2007-01-30  Brian Cameron  <brian.cameron@sun.com>

	* configure.in:  Now add libedataserver to the CLOCK_LIBS to
	  fix compile issue on Solaris.  Also, good for pkg-config to
	  check to make sure the right version of edataserver is on
	  the system.

2007-01-21  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.17.91.

==================== 2.17.90 ====================

2007-01-21  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.17.90

2007-01-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in: check for langinfo.h and nl_langinfo
	Fix bug #394893
	Remove check for lockf (was for egg code)

2007-01-14  Vincent Untz  <vuntz@gnome.org>

	* configure.in: check for environ for darwin
	Part of bug #394896
	* configure.in: set warnings to maximum

2007-01-14  Vincent Untz  <vuntz@gnome.org>

	* icons/*: add launcher icon
	Fix bug #351832

2007-01-14  Vincent Untz  <vuntz@gnome.org>

	* doc/panel-keynav.txt: fix typos
	Fix bug #395654, patch by Yang Hong <yanghong@ccoss.com.cn>

2006-11-29  Stepan Kasal  <skasal@redhat.com>
