@@ -1,0 +1,16 @@
+[Desktop Entry]
+Encoding=UTF-8
+Type=Application
+Name=Panel
+#Comment=
+Icon=gnome-panel
+Exec=gnome-panel
+StartupNotify=true
+Terminal=false
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=gnome-panel
+X-GNOME-Bugzilla-Component=general
+X-GNOME-Bugzilla-Version=@VERSION@
+Categories=GNOME;GTK;Utility;Core;
+OnlyShowIn=GNOME;
+NoDisplay=True
