@@ -1,3 +1,9 @@
+2007-03-06  Vincent Untz  <vuntz@gnome.org>
+
+	* Makefile.am: install gnome-panel.desktop for bug-buddy
+	* gnome-panel/gnome-panel.desktop.in: new
+	Fix bug #382584
+
 2007-03-05  Vincent Untz  <vuntz@gnome.org>
 
 	* panel-run-dialog.glade: fix alignment of a button. This is not a UI
