@@ -1,3 +1,8 @@
+2007-03-06  Vincent Untz  <vuntz@gnome.org>
+
+	* configure.in: require pango 1.15.4 for the clock, generate
+	gnome-panel/gnome-panel.desktop
+
 2007-02-26  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: post-release bump to 2.18.0.
